Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88934

[Reg 5.15 -> 6] QFrame in the menu isn't drawing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 6.4.0
    • Widgets: Layout
    • None
    • Windows 10, DPI=125%
    • Windows
    • 7dd454e1b9 (qt/qtbase/dev) 7dd454e1b9 (qt/tqtc-qtbase/dev) 2643b98f27 (qt/qtbase/6.3) 2643b98f27 (qt/tqtc-qtbase/6.3) 04b9c31b02 (qt/tqtc-qtbase/6.3) 04b9c31b02 (qt/qtbase/6.3.1) 04b9c31b02 (qt/tqtc-qtbase/6.3.1) 2d6f04b5bc (qt/tqtc-qtbase/6.2)

    Description

      Steps to reproduce:

      • build & run the attached "hor_sep" project from the new "hor_sep2.zip";
      • click on "Show Menu" button

      Result: No line between "act9" and "act10" menu items.

      Attachments

        1. hor_sep.zip
          2 kB
          Nodir Temirkhodjaev
        2. hor_sep_qt5.jpg
          5 kB
          Nodir Temirkhodjaev
        3. hor_sep_qt6.jpg
          6 kB
          Nodir Temirkhodjaev
        4. hor_sep2.zip
          2 kB
          Nodir Temirkhodjaev

        Issue Links

          For Gerrit Dashboard: QTBUG-88934
          # Subject Branch Project Status CR V

          Activity

            People

              qt.team.quick.subscriptions Qt Quick and Widgets Team
              nodir.temir Nodir Temirkhodjaev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: